work in progress: added jwt and some swagger
