# pkg/requests/requests.go
@@ -4,9 +4,6 @@ type SignInWithWalletRequest struct {
 	WalletPub string `json:"wallet_pub" validate:"required,eth_addr"`
 }
 
-type SignOutRequest struct {
-}
-
 type RefreshTokensRequest struct {
 	RefreshToken string `json:"refresh_token" validate:"required"`
 }
@@ -14,4 +11,9 @@ type RefreshTokensRequest struct {
 type VerifySignatureRequest struct {
 	WalletPub string `json:"wallet_pub" validate:"required,eth_addr"`
 	Signature string `json:"signature" validate:"required"`
+}
+
+type SignOutRequest struct {
+	RefreshToken string `json:"refresh_token" validate:"required"`
+	AccessToken  string `json:"access_token" validate:"required"` // Потом будет в Authorization
 }
